tdf#129488 Fix Font size control enabled state

Set the enabled state of toolbox that contains the font size control to
that of the font size control

This patch was inspired by the code used to set the enabled state of the
font name control in SvxFontNameToolBoxControl::statusChanged

Change-Id: I50b7852e3cbb4c552fe8b38e7e6529b75e404ae0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/86040
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>